sass-proj/sass/_title-ending.scss
@use "global" as *;

.hero {
  @include flex-center;
  flex-direction: column;
  @include verticle-gaps; 
  width: 100%;
  height: 40vh;
  display: flex;
}

#sass-logo {
  @include sass-logo-width; 
}

.body {

  @include flex-center;
  flex-direction: column;
  width: 100%;
  height: 60vh;
  display: flex;

}

